--- a/Thiago.Todo.WebApp/src/index.css
+++ b/Thiago.Todo.WebApp/src/index.css
@@ -7,3 +7,14 @@ body{
     width: 100%;
     height: 100vh;
 }
+
+.todo-row{
+    display: flex;
+    justify-content: space-around;
+    padding: .5em;
+}
+
+
+.todo-input{
+    width: 25em;    
+}
